--- a/index.html
+++ b/index.html
@@ -158,63 +158,45 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="images/logo.png" alt="Berrett Home Services Logo" class="logo">
-            <h1 class="main-title">Berrett Home Services</h1>
-            <p class="subtitle">Professional Pest Control Solutions</p>
+            <img src="images/logo2.jpg" alt="Berrett Home Services Logo" class="logo">
+            <h1 class="main-title">
+                Simpson Pest Control
+                </h1>
         </div>
 
         <div class="nav-sections">
             <div class="nav-section">
                 <h2 class="section-title">BED BUG</h2>
                 <ul class="nav-links">
-                    <li><a href="bedBug-1.html">Bed Bug Treatment - Page 1</a></li>
-                    <li><a href="bedBug-2.html">Bed Bug Treatment - Page 2</a></li>
-                    <li><a href="#">Bed Bug Inspection</a></li>
-                    <li><a href="#">Bed Bug Prevention</a></li>
+                    <li><a href="bedBug-1.html">Bed Bug Treatment - form 1</a></li>
+                    <li><a href="bedBug-2.html">Bed Bug Treatment - form 2</a></li>
+                    <li><a href="#">Bed Bug Treatment - form 3</a></li>
+                    <li><a href="#">Bed Bug Treatment - form 4</a></li>
                 </ul>
             </div>
 
             <div class="nav-section">
                 <h2 class="section-title">TERMITE</h2>
                 <ul class="nav-links">
-                    <li><a href="#">Termite Inspection</a></li>
-                    <li><a href="#">Termite Treatment</a></li>
-                    <li><a href="#">Termite Prevention</a></li>
-                    <li><a href="#">Termite Damage Repair</a></li>
+                    <li><a href="#">Termite - form 1</a></li>
+                    <li><a href="#">Termite - form 2</a></li>
+                    <li><a href="#">Termite - form 3</a></li>
+                    <li><a href="#">Termite - form 4</a></li>
                 </ul>
             </div>
 
             <div class="nav-section">
                 <h2 class="section-title">EXCLUSION</h2>
                 <ul class="nav-links">
-                    <li><a href="#">Wildlife Exclusion</a></li>
-                    <li><a href="#">Rodent Exclusion</a></li>
-                    <li><a href="#">Bird Exclusion</a></li>
-                    <li><a href="#">Bat Exclusion</a></li>
+                    <li><a href="#">Exclusion - form 1</a></li>
+                    <li><a href="#">Exclusion - form 2</a></li>
+                    <li><a href="#">Exclusion - form 3</a></li>
+                    <li><a href="#"> Exclusion - form 4</a></li>
                 </ul>
             </div>
         </div>
 
-        <div class="contact-info">
-            <h3>Contact Information</h3>
-            <div class="contact-details">
-                <div class="contact-item">
-                    <span class="city">OKC:</span> <span>(405) 768-1045</span>
-                </div>
-                <div class="contact-item">
-                    <span class="city">Houston:</span> <span>(281) 712-1608</span>
-                </div>
-                <div class="contact-item">
-                    <span class="city">Denver:</span> <span>(303) 400-0410</span>
-                </div>
-                <div class="contact-item">
-                    <span class="city">Dallas/FTW:</span> <span>(241) 242-4800</span>
-                </div>
-            </div>
-            <div class="contact-item" style="margin-top: 15px; text-align: center;">
-                <strong>www.BerrettHomeServices.com</strong>
-            </div>
-        </div>
+        
     </div>
 </body>
 </html>
