--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <li><a href="bedBug-1.html">Bed Bug Treatment - form 1</a></li>
                     <li><a href="bedBug-2.html">Bed Bug Treatment - form 2</a></li>
                     <li><a href="bedBug-3.html">Bed Bug Treatment - form 3</a></li>
-                    <li><a href="#">Bed Bug Treatment - form 4</a></li>
+                    <li><a href="begBug-4.html">Bed Bug Treatment - form 4</a></li>
                 </ul>
             </div>
 
