--- a/bedBug-1.html
+++ b/bedBug-1.html
@@ -44,7 +44,7 @@
             <table class="info-table">
                 <tr>
                     <td class="label">Contact</td>
-                    <td class="value" colspan="5"><input type="text" value="Angela Bernardo"></td>
+                    <td class="value" colspan="5"><input type="text"></td>
                 </tr>
                 <tr>
                     <td class="label">Company</td>
@@ -52,19 +52,19 @@
                 </tr>
                 <tr>
                     <td class="label">Street</td>
-                    <td class="value" colspan="5"><input type="text" value="415 N. Jester Ave"></td>
+                    <td class="value" colspan="5"><input type="text"></td>
                 </tr>
                 <tr>
                     <td class="label">City</td>
-                    <td class="value"><input type="text" value="Dallas"></td>
+                    <td class="value"><input type="text"></td>
                     <td class="label">State</td>
-                    <td class="value"><input type="text" value="TX"></td>
+                    <td class="value"><input type="text"></td>
                     <td class="label">Zip Code</td>
-                    <td class="value"><input type="text" value="75211"></td>
+                    <td class="value"><input type="text"></td>
                 </tr>
                 <tr>
                     <td class="label">Phone</td>
-                    <td class="value" colspan="2"><input type="text" value="941-875-4989"></td>
+                    <td class="value" colspan="2"><input type="text"></td>
                     <td class="label">Map-Grid</td>
                     <td class="value" colspan="2"><input type="text"></td>
                 </tr>
@@ -122,13 +122,13 @@
         </div>
         <div class="pricing-breakdown">
             <span class="pricing-label">Initial Intensive Treatment $</span>
-            <input type="text" class="pricing-input" value="780.00">
+            <input type="text" class="pricing-input">
             <span class="pricing-label">Bedbug Encasements #</span>
-            <input type="text" class="pricing-input" value="4">
+            <input type="text" class="pricing-input">
             <span class="pricing-label">X $60 = $</span>
-            <input type="text" class="pricing-input" value="240.00">
+            <input type="text" class="pricing-input">
             <span class="pricing-label">Total + Tax $</span>
-            <input type="text" class="pricing-input" value="1,104.15">
+            <input type="text" class="pricing-input">
         </div>
     </div>
 
@@ -136,8 +136,8 @@
         <div class="steps-header">
             <div class="steps-title">7 Steps to Eliminating Bed Bugs</div>
                     <div class="steps-details">
-            <div>Encasements: Twin <input type="text" class="underscore-input"> Full <input type="text" class="underscore-input"> Queen <input type="text" class="underscore-input" value="4"> King <input type="text" class="underscore-input"> Special <input type="text" class="underscore-input"></div>
-            <div>Number Bedrooms being Treated <input type="text" class="underscore-input" value="3"> Numbers of Living areas being Treated <input type="text" class="underscore-input"></div>
+            <div>Encasements: Twin <input type="text" class="underscore-input"> Full <input type="text" class="underscore-input"> Queen <input type="text" class="underscore-input"> King <input type="text" class="underscore-input"> Special <input type="text" class="underscore-input"></div>
+            <div>Number Bedrooms being Treated <input type="text" class="underscore-input"> Numbers of Living areas being Treated <input type="text" class="underscore-input"></div>
         </div>
         </div>
 
@@ -150,9 +150,9 @@
             <div class="verification-content">
                 <span>Bed bugs are verified as being present</span>
                 <div class="checkbox-group">
-                    <div class="checkbox-item">
-                        <input type="checkbox" checked> Yes
-                    </div>
+                                    <div class="checkbox-item">
+                    <input type="checkbox"> Yes
+                </div>
                     <div class="checkbox-item">
                         <input type="checkbox"> No
                     </div>
@@ -173,7 +173,7 @@
                     <input type="checkbox"> Email <input type="text" class="contact-input">
                 </div>
                 <div class="checkbox-item">
-                    <input type="checkbox" checked> Cell <input type="text" class="contact-input" value="941-875-4989"> 
+                    <input type="checkbox"> Cell <input type="text" class="contact-input"> 
                 </div>
                 <div class="checkbox-item">
                     <input type="checkbox"> Home <input type="text" class="contact-input">
