--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <ul class="nav-links">
                     <li><a href="temite-1.html">Termite - form 1</a></li>
                     <li><a href="termite-2.html">Termite - form 2</a></li>
-                    <li><a href="#">Termite - form 3</a></li>
+                    <li><a href="termite-3.html">Termite - form 3</a></li>
                     <li><a href="#">Termite - form 4</a></li>
                 </ul>
             </div>
