--- a/termite-2.html
+++ b/termite-2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Consumer Information Sheet</title>
-    <link rel="stylesheet" href="css/termite-2.css">
+    <link rel="stylesheet" href="css/temite/termite-2.css">
 
 </head>
 
