--- a/termite-4.html
+++ b/termite-4.html
@@ -34,7 +34,7 @@
             </div>
             <div class="field-row">
                 <div class="field">
-                    <input type="text" value="TECHNICIAN | Austin Ellis">
+                    <input type="text" value="TECHNICIAN | ">
                 </div>
                 <div class="field">
                     <input type="text" value="ADDRESS | ">
@@ -43,7 +43,7 @@
                     <input type="text" value="CITY | ">
                 </div>
                 <div class="field zip-field">
-                    <input type="text" value="ZIP | TX">
+                    <input type="text" value="ZIP | ">
                 </div>
             </div>
         </div>
