--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <h2 class="section-title">EXCLUSION</h2>
                 <ul class="nav-links">
                     <li><a href="exclusion-1.html">Exclusion - form 1</a></li>
-                    <li><a href="#">Exclusion - form 2</a></li>
+                    <li><a href="exclusion-2.html">Exclusion - form 2</a></li>
                     <li><a href="exclusion-3.html">Exclusion - form 3</a></li>
                     <li><a href="#"> Exclusion - form 4</a></li>
                 </ul>
