--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <li><a href="exclusion-1.html">Exclusion - form 1</a></li>
                     <li><a href="exclusion-2.html">Exclusion - form 2</a></li>
                     <li><a href="exclusion-3.html">Exclusion - form 3</a></li>
-                    <li><a href="#"> Exclusion - form 4</a></li>
+                    <li><a href="exclusion-4.html"> Exclusion - form 4</a></li>
                 </ul>
             </div>
         </div>
