--- a/exclusion-4.html
+++ b/exclusion-4.html
@@ -1,35 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Berrett Home Services - Pest Control Inspection</title>
     <link rel="stylesheet" href="css/exclusion/exclusion-4.css">
 </head>
-
 <body>
-    <div class="doc-container">
-        <!-- Header Fields -->
-        <input class="field" type="text" placeholder="Luke Riley" style="top: 100px; left: 150px; width: 200px;">
-        <input class="field" type="text" placeholder="517 Jessie St" style="top: 130px; left: 150px; width: 300px;">
-        <input class="field" type="text" placeholder="Keller" style="top: 130px; left: 500px; width: 100px;">
-        <input class="field" type="text" placeholder="Tx" style="top: 130px; left: 650px; width: 50px;">
-        <input class="field" type="text" placeholder="76248" style="top: 130px; left: 750px; width: 100px;">
-        <input class="field" type="text" placeholder="817‑637‑1580" style="top: 160px; left: 150px; width: 200px;">
-        <input class="field" type="text" placeholder="Ainsley Watson" style="top: 190px; left: 150px; width: 300px;">
-        <input class="field" type="text" placeholder="Full Exclusion" style="top: 230px; left: 350px; width: 300px;">
-        <input class="field" type="text" placeholder="6/3" style="top: 230px; left: 850px; width: 100px;">
+    <div class="container">
+        <!-- Header Section -->
+        <header class="header">
+            <div class="logo-section">
+                <div class="logo-container">
+                    <img src="images/newLogo.png" alt="Berrett Home Services Logo" class="company-logo">
+                </div>
+                <div class="company-info">
+                    <p>Simpson Pest Control</p>
+                    <p>5565 Red Bird Center Drive</p>
+                    <p>Dallas, TX 75237</p>
+                    <p>(214) 814-1440</p>
+                    <p class="website">www.simpsonpest.com</p>
+                </div>
+            </div>
+            
+            <div class="job-info-table">
+                <div class="form-section">
+                    <div class="section-row">
+                        <div class="label-strip">PREPARED FOR</div>
+                        <div class="label-strip-right">PHONE NO</div>
+                    </div>
+                    <div class="data-row">
+                        <div class="data-field-left">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                        <div class="data-field-right">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                    </div>
+                </div>
 
-        <!-- Renewal fields in "table" -->
-        <input class="field" type="text" placeholder="Luke Riley" style="top: 300px; left: 150px; width: 250px;">
-        <input class="field" type="text" placeholder="1049410" style="top: 300px; left: 600px; width: 200px;">
-        <input class="field" type="text" placeholder="yyyy-mm-dd" style="top: 340px; left: 150px; width: 250px;">
-        <input class="field" type="text" placeholder="yyyy-mm-dd" style="top: 340px; left: 600px; width: 250px;">
-        <input class="field" type="text" placeholder="289.00" style="top: 380px; left: 150px; width: 200px;">
+                <div class="form-section">
+                    <div class="section-row">
+                        <div class="label-strip">ADDRESS</div>
+                        <div class="label-strip-mini">CITY</div>
+                        <div class="label-strip-mini">STATE</div>
+                        <div class="label-strip-mini">ZIP</div>
+                    </div>
+                    <div class="data-row">
+                        <div class="data-field-address">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                        <div class="data-field-city">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                        <div class="data-field-state">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                        <div class="data-field-zip">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-section">
+                    <div class="section-row">
+                        <div class="label-strip">JOB LOCATION</div>
+                        <div class="label-strip-right">PHONE NO</div>
+                    </div>
+                    <div class="data-row">
+                        <div class="data-field-left">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                        <div class="data-field-right">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-section">
+                    <div class="section-row">
+                        <div class="label-strip">PREPARED BY</div>
+                        <div class="label-strip-right">APPROVED BY</div>
+                    </div>
+                    <div class="data-row">
+                        <div class="data-field-left">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                        <div class="data-field-right">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-section">
+                    <div class="section-row">
+                        <div class="label-strip">REMARKS</div>
+                        <div class="label-strip-right">DATE</div>
+                    </div>
+                    <div class="data-row">
+                        <div class="data-field-remarks">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                        <div class="data-field-date">
+                            <input type="text" class="form-input" value="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <!-- Legend Section -->
+        <div class="legend-section">
+            <div class="legend-row">
+                <div class="legend-item">
+                    <span class="legend-symbol rr">●</span>
+                    <span class="legend-text">RR</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol fv">▓▓▓</span>
+                    <span class="legend-text">FV</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol at">⚲</span>
+                    <span class="legend-text">AT</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol sgap">●</span>
+                    <span class="legend-text">S/GAP</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol llive">■</span>
+                    <span class="legend-text">L/LIVE</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol weeps">□</span>
+                    <span class="legend-text">WEEPS</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+            </div>
+            <div class="legend-row">
+                <div class="legend-item">
+                    <span class="legend-symbol pv2">●</span>
+                    <span class="legend-text">2*PV</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol dvc">●</span>
+                    <span class="legend-text">DVC</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol gv">●</span>
+                    <span class="legend-text">GV</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol lgap">●</span>
+                    <span class="legend-text">L/GAP</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol slive">■</span>
+                    <span class="legend-text">SLIVE</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol tx17">▓</span>
+                    <span class="legend-text">17X17</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+            </div>
+            <div class="legend-row">
+                <div class="legend-item">
+                    <span class="legend-symbol pv3">●</span>
+                    <span class="legend-text">3*PV</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol ovc">▓▓▓</span>
+                    <span class="legend-text">OVC</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol rv">▓▓▓</span>
+                    <span class="legend-text">RV</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol gds">■</span>
+                    <span class="legend-text">GDS</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol siow">●</span>
+                    <span class="legend-text">SIOW</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol dx30">●</span>
+                    <span class="legend-text">30X30</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+            </div>
+            <div class="legend-row">
+                <div class="legend-item checkbox-group">
+                    <label>Screen</label>
+                    <input type="checkbox" class="checkbox">
+                    <label>Covers</label>
+                    <input type="checkbox" class="checkbox">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol low">●</span>
+                    <span class="legend-text">LOW</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+                <div class="legend-item">
+                    <span class="legend-symbol jw">●</span>
+                    <span class="legend-text">JW</span>
+                    <input type="text" class="legend-input" value="">
+                </div>
+            </div>
+        </div>
+
+        <!-- Chart Image -->
+        <div class="chart-container">
+            <img src="images/chart.png" alt="Property Diagram" class="chart-image">
+        </div>
     </div>
-
 </body>
-</body>
-
 </html>
