--- a/exclusion-3.html
+++ b/exclusion-3.html
@@ -9,13 +9,13 @@
 
 <body>
 
-    <h1>Berrett Home Services</h1>
+    <h1>Simpson Pest Control</h1>
     <h2>Rodent and Wildlife Exclusion Program<br><span class="heading3">Warranty Certificate</span></h2>
 
-    <p class="centeredText"><strong>Thank you for choosing Berrett's Rodent and Wildlife Exclusion Program. Due to the
+    <p class="centeredText"><strong>Thank you for choosing Simpson Pest Control. Due to the
             high demand for this
             service
-            Berrett Home Services is one of the only companies to offer a renewable warranty that continues to protect
+            Simpson Pest Control is one of the only companies to offer a renewable warranty that continues to protect
             your
             home long after we have solved the initial rodent or wildlife issue. This warranty covers your home for re
             baiting and trapping for rodent’s, as well as sealing any new entry points if created by rodents or
@@ -31,8 +31,8 @@
     <p class="section-title">Understanding your warranty:</p>
     <p>You have two options when choosing your warranty.</p>
     <ol>
-        <li>Rodent Exclusion Warranty with Berrett Services.</li>
-        <li>Rodent Exclusion Warranty without Berrett Services.</li>
+        <li>Rodent Exclusion Warranty with Simpson Pest Control  Services.</li>
+        <li>Rodent Exclusion Warranty without Simpson Pest Control  Services.</li>
     </ol>
     <p>The coverage for the two are the same. However, the cost is exclusive to the services you have with us that are
         pre existing or that you purchase along with your exclusion program. Qualifying programs are recurring pest,
@@ -51,7 +51,7 @@
         inspection to make sure the home is still properly excluded according to the agreement on file.</p>
 
     <p>This certificate is proof of your coverage, if at any time you wish to cancel the warranty, you must notify
-        Berrett Home Services 30 days prior to your intent to cancel. Canceling by email is acceptable.</p>
+        Simpson Pest Control 30 days prior to your intent to cancel. Canceling by email is acceptable.</p>
 
     <p class="section-title">What does your warranty cover:</p>
     <ul>
