--- a/exclusion-2.html
+++ b/exclusion-2.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="authorization-text">
-                I authorize Berret Home Services to automatically charge my credit/debit card at the time of each service.
+                I authorize Simpson Pest Control to automatically charge my credit/debit card at the time of each service.
             </div>
             <div class="signature-line">
                 <label>Signature:</label>
@@ -163,7 +163,7 @@
             <div class="signature-input-row">
                 <div class="signature-column">
                     <input type="text" class="signature-input" value="">
-                    <div class="signature-label">Berrett Account manager</div>
+                    <div class="signature-label">simpsonpest Account manager</div>
                 </div>
                 <div class="signature-column">
                     <input type="text" class="signature-input" value="">
