--- a/exclusion-1.html
+++ b/exclusion-1.html
@@ -18,7 +18,7 @@
                     <div class="logo-image">
                         <img src="images/newLogo.png" alt="Berret Home Services Logo" class="company-logo-img">
                     </div>
-                    <div class="website">WWW.BERRETHOMESERVICES.COM</div>
+                    <div class="website">www.simpsonpest.com</div>
                 </div>
             </div>
            
