Berrett  work changes over the website

--- a/begBug-4.html
+++ b/begBug-4.html
@@ -79,9 +79,11 @@
         <div class="contact-section">
             <div class="contact-info">
                 <div class="company-name">Simpson Pest Control</div>
-                <div class="address">Easy St. Garland, TX 75042</div>
+                <div class="address">5565 Red Bird Center Drive</div>
                 <div class="address">Dallas, TX 75237</div>
-                <div class="phone">(214) 814-1440</div>
+                <div class="phone">(214) 814-1440
+
+                </div>
                 <div class="website">www.simpsonpest.com</div>
             </div>
         </div>
