--- a/exclusion-1.html
+++ b/exclusion-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exclusion / Wildlife Agreement - Berret Home Services</title>
+    <title>Exclusion / Wildlife Agreement - Simpson Home Services</title>
     <link rel="stylesheet" href="css/exclusion/exclusion-1.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                     <div class="logo-design">
                     </div>
                     <div class="logo-image">
-                        <img src="images/newLogo.png" alt="Berret Home Services Logo" class="company-logo-img">
+                        <img src="images/newLogo.png" alt="Simpson Home Services Logo" class="company-logo-img">
                     </div>
                     <div class="website">www.simpsonpest.com</div>
                 </div>
@@ -245,7 +245,7 @@
 
             <!-- Warranty Information -->
             <div class="warranty-section">
-                When Warranty is present it applies only to excluded areas by Berret Home Services per graph attached. Specialty Items may need to ordered, they will be
+                When Warranty is present it applies only to excluded areas by Simpson Home Services per graph attached. Specialty Items may need to ordered, they will be
                 recorded upon service, or upcoming follow up services. Annual Warranty when applicable starts at $300 + tax and applies only to full exclusion services. Cost will
                 appropriately be charged at this time of service. **Please have paint available by end follow up service if we are excluding any areas of the home with flashing.
             </div>
