--- a/exclusion-2.html
+++ b/exclusion-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exclusion Service Agreement - Berret Home Services</title>
+    <title>Exclusion Service Agreement - Simpson Home Services</title>
     <link rel="stylesheet" href="css/exclusion/exclusion-2.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <!-- Header Section -->
         <div class="header">
             <div class="logo-section">
-                <img src="images/newLogo.png" alt="Berret Home Services Logo" class="company-logo">
+                <img src="images/newLogo.png" alt="Simpson Home Services Logo" class="company-logo">
             </div>
         </div>
 
@@ -116,7 +116,7 @@
                 <p>If between the homeowner, and the company, we determine that additional areas will need to be excluded, there will be an additional fee for those 
                 areas as they would fall outside the scope of work originally performed.</p>
 
-                <p>Said area(s) are being treated without intentionally damaging any parts of the structure except as agreed upon above. Berrett agrees to use 
+                <p>                Said area(s) are being treated without intentionally damaging any parts of the structure except as agreed upon above. Simpson agrees to use 
                 reasonable care in the performance care in the performance of its work but assumes no responsibility for damage to any plumbing or heating pipes, 
                 electrical conduits, satellite dishes, cable lines, or other facilities or appurtenances, plants, shrubs, or for injuries or deaths of pets or animals.</p>
 
@@ -129,8 +129,8 @@
                 including but not limited to fungus damage. It does not cover damage caused by rodents, other than those areas listed above, including but not 
                 limited to damage to AC lines, electrical cords or lines. All terms of agreement between the parties are contained in the exclusion service 
                 agreement and no other representations or statements shall be binding upon the parties. In case of non-payment by the purchaser reasonable 
-                attorney's fees and costs of collection shall be paid by purchaser. If Berrett is not authorized to commence work within 30 days of acceptance by 
-                customer, Berrett Home Services reserves the right to adjust prices as deemed necessary.</p>
+                attorney's fees and costs of collection shall be paid by purchaser. If Simpson is not authorized to commence work within 30 days of acceptance by 
+                customer, Simpson Home Services reserves the right to adjust prices as deemed necessary.</p>
 
                 <div class="initials-line">
                     <label>Initials:</label>
