--- a/temite-1.html
+++ b/temite-1.html
@@ -11,7 +11,7 @@
         <div class="header-content">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="images/logo2.jpg" alt="Berrett Pest Control Logo">
+                    <img src="images/logo2.jpg" alt="Simpson Pest Control Logo">
                 </div>
                 <div class="website">www.simpsonpest.com</div>
             </div>
@@ -19,17 +19,15 @@
             <div class="contact-info">
                 <div class="contact-block dallas">
                     <div class="block-title">DALLAS/FT WORTH:</div>
-                    <div>708 Easy Street</div>
-                    <div>Garland, TX 75042</div>
-                    <div>(214) 242-4800</div>
-                    <div>TPCL 11377</div>
+                    <div>5565 Red Bird Center Drive</div>
+                    <div>Dallas, TX 75237</div>
+                    <div>(214) 814-1440</div>
                 </div>
                 <div class="contact-block houston">
                     <div class="block-title">HOUSTON:</div>
-                    <div>14173 Northwest Frwy #111</div>
-                    <div>Houston, TX 77040</div>
-                    <div>(281) 712-1608</div>
-                    <div>TPCL 11377A</div>
+                    <div>5565 Red Bird Center Drive</div>
+                    <div>Dallas, TX 75237</div>
+                    <div>(214) 814-1440</div>
                 </div>
             </div>
         </div>
@@ -257,7 +255,7 @@
                 <div class="warranty-options">
                     <div class="warranty-option">
                         <div class="checkbox-item">
-                            <input type="checkbox" checked> A Re-treatment warranty of Termites. If the Termites should reappear, Berrett will provide treatment to eliminate the Termite infestation, and will continue to provide re-treatments until said infestation has been completely destroyed. Warranty is renewable Monthly/Yearly and is Transferable. $150 Transfer Fee.
+                            <input type="checkbox" checked> A Re-treatment warranty of Termites. If the Termites should reappear, Simpson pest will provide treatment to eliminate the Termite infestation, and will continue to provide re-treatments until said infestation has been completely destroyed. Warranty is renewable Monthly/Yearly and is Transferable. $150 Transfer Fee.
                         </div>
                     </div>
                     <div class="warranty-option">
