--- a/bedBug-3.html
+++ b/bedBug-3.html
@@ -13,7 +13,7 @@
         <div class="header-content">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="images/logo2.jpg" alt="Berrett Home Services Logo">
+                    <img src="images/logo2.jpg" alt="Simpson Home Services Logo">
                 </div>
             </div>
             
