--- a/exclusion-4.html
+++ b/exclusion-4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berrett Home Services - Pest Control Inspection</title>
+    <title>Simpson Home Services - Pest Control Inspection</title>
     <link rel="stylesheet" href="css/exclusion/exclusion-4.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <header class="header">
             <div class="logo-section">
                 <div class="logo-container">
-                    <img src="images/newLogo.png" alt="Berrett Home Services Logo" class="company-logo">
+                    <img src="images/newLogo.png" alt="Simpson Home Services Logo" class="company-logo">
                 </div>
                 <div class="company-info">
                     <p>Simpson Pest Control</p>
