--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="images/logo2.jpg" alt="Berrett Home Services Logo" class="logo">
+            <img src="images/logo2.jpg" alt="Simpson Home Services Logo" class="logo">
             <h1 class="main-title">
                 Simpson Pest Control
             </h1>
