--- a/termite-4.html
+++ b/termite-4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berrett Pest Control - Treatment Chart</title>
+    <title>Simpson Pest Control - Treatment Chart</title>
     <link rel="stylesheet" href="css/temite/termite-4.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <!-- Header Section -->
         <div class="header">
             <div class="logo-section">
-                <img src="images/logo2.jpg" alt="Berrett Pest Control Logo" class="logo">
+                <img src="images/logo2.jpg" alt="Simpson Pest Control Logo" class="logo">
                 
             </div>
             <div class="website">
